--- a/NestHR.csproj
+++ b/NestHR.csproj
@@ -45,6 +45,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\assetsNest\Logo\" />
+    <Folder Include="wwwroot\assetsNest\photo\" />
     <Folder Include="wwwroot\Font\" />
   </ItemGroup>
 
